--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,6 +3,4 @@
 <%= @category.name  %>
  <h4><%= link_to "update", category_edit_path(@category) %></h4>
  <h4><%= link_to "delete", category_delete_path(@category),  method: :delete,  data: { confirm: "Are you sure?" } %></h4>
- <%@articles.each do |article|%>
-  <%= article.url  %>
- <% end %>
+<%=render "layouts/cards"%>
