--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,23 +1,56 @@
-.green{
-  background-color: #77E89C;
+.btn{
+  height: 34px;
+  padding: 8px 18px;
+  margin: 10px;
+  background-color: white;
+  box-shadow: 0 15px 55px 0 rgba(0,0,0,0.07), 0 2px 4px 0 rgba(0,0,0,0.5);
+  color: black;
+  font-weight: 100;
+  font-size: 14px;
+  border-radius:17px;
+}
+.btn:hover{
+  opacity: 1;
+}
+.green:hover{
+  background-color: $green;
 }
 
 
-.orange{
-  background-color:  #FD9B75;
+.orange:hover{
+  background-color:  $orange;
  }
 
-.yellow{
-background-color:#FFFC8A;
+.yellow:hover{
+background-color: $yellow;
 }
 
-.blue{
-  background-color: #58C4FF;
+.blue:hover{
+  background-color: $blue;
 }
-.purple{
-  background-color: #875DF5;
+.purple:hover{
+  background-color: $purple;
 }
 
-.red{
+.red:hover{
+  background-color: $red;
+}
+
+.add-button{
+  height: 50px;
+  width:50px;
+  background-color: $red;
+  border-radius: 100%;
+  margin: 30px auto;
+}
+
+.plus-sign{
+  margin: 8px;
+}
+.btn-sumbit{
+  height: 40px;
+  width: 161px;
+  border-radius: 20px;
   background-color: #E95262;
+  color: white;
 }
