--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
-$light-gray: #F4F4F4;
+$red: #E95262;
+$blue: #58C4FF;
+$yellow: #FFFC8A;
+$orange: #FD9B75;
+$green:  #77E89C;
+$gray: #7E7B7B;
+$light-gray: #F9FAFD;
+$purple: #875DF5;
