--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,15 @@
   </head>
 
   <body>
+
+    <%= render 'shared/navbar' %>
+    <%= render 'shared/flashes' %>
     <%= render 'categories/list' %>
     <%= render 'articles/form' %>
-    <%= yield %>
+
+    <div class="container">
+      <%= yield %>
+    </div>
 
   <%= javascript_pack_tag "application" %>
   </body>
